CDR-1901 - Remove EHRBase Template Id header
- Get the template id without optionals